--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -75,10 +75,92 @@ body{
   --surface-color: rgba(255, 255, 255, 0.1);
 }
 
+
 /* Smooth scroll */
 :root {
   scroll-behavior: smooth;
 }
+
+/*--------------------------------------------------------------
+  # animition fade
+  --------------------------------------------------------------*/
+.fade-element {
+    opacity: 0;
+    position: relative;
+    transition: opacity 1.5s, top 1.5s, left 1.5s;
+}
+
+.fade-left {
+    left: -30px;
+}
+
+.fade-right {
+    left: 30px;
+}
+
+.fade-down {
+    top: 30px;
+}
+
+.fade-up {
+    top: -30px;
+}
+
+.word-fade-element {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.1s, transform 1.5s;
+    display: inline-block;
+}
+
+.word-fade-top {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/*--------------------------------------------------------------
+  # Global css start
+  --------------------------------------------------------------*/
+  .section-title span {
+    font-size: 17px;
+    font-weight: 300;
+    color: var(--icon);
+    letter-spacing: 1px;
+    font-family: "Montserrat";
+}
+
+.section-heading h2 {
+    padding: 5px 0px;
+    font-weight: 500;
+    color: var(--black);
+    letter-spacing: 1.5px;
+    font-size: 36px;
+    line-height: 2.9rem;
+    font-family: "Montserrat";
+}
+.section-heading p {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 300;
+    text-align: center;
+    max-width: 650px;
+    margin: 0 auto;
+    padding-bottom: 60px;
+    font-family: "Roboto", "Open Sans";
+}
+
+.section-title span:before,
+.section-title span:after {
+    content: "";
+    width: 50px;
+    height: 3px;
+    background: var(--icon);
+    display: inline-block;
+    margin-bottom: 4px;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
 
 /*--------------------------------------------------------------
   # header start
@@ -333,43 +415,736 @@ body{
 }
 
 /*--------------------------------------------------------------
-  # Footer start
+  # service start
+  --------------------------------------------------------------*/
+  .banner-fade-element {
+    opacity: 0;
+    transition: opacity 1.5s ease-in-out;
+}
+
+.banner-fade-down {
+    transform: translateY(-20px);
+    transition: transform 1.5s ease-in-out;
+}
+
+.banner-fade-up {
+    transform: translateY(20px);
+    transition: transform 1.5s ease-in-out;
+}
+
+.banner-fade-left {
+    transform: translateX(-20px);
+    transition: transform 1.5s ease-in-out;
+}
+
+.banner-fade-right {
+    transform: translateX(20px);
+    transition: transform 1.5s ease-in-out;
+}
+
+@keyframes zoomIn {
+    0% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(1.1);
+    }
+}
+
+@keyframes slideInRight {
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+.carousel-img {
+    animation: zoomIn 10s ease-in-out infinite alternate;
+}
+
+.carousel-caption {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    width: 100%;
+    display: flex;
+    align-items: center !important;
+    text-align: unset !important;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#banner .banner-content {
+    width: 80%;
+}
+#banner .banner-desc {
+    margin-left: 30px;
+}
+
+#banner .banner-content p {
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    font-family: "Montserrat";
+}
+
+#banner .banner-content p::before {
+    content: "";
+    width: 70px;
+    height: 3px;
+    background: var(--icon);
+    display: inline-block;
+    margin-bottom: 4px;
+    margin-right: 15px;
+}
+
+#banner .banner-content h1 {
+    font-size: 60px;
+    font-weight: 500;
+    font-family: "Montserrat";
+}
+
+#banner .banner-content .touch-apply button {
+    position: relative;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--white);
+    background-color: var(--icon);
+    border: none;
+    padding: 18px 30px;
+    letter-spacing: 2px;
+    margin-top: 50px;
+    cursor: pointer;
+    overflow: hidden;
+    transition: color 0.4s;
+    z-index: 1;
+    font-family: "Montserrat";
+}
+
+.touch-apply button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--bg-color);
+    transition: left 0.4s;
+    z-index: -1;
+}
+
+.touch-apply button:hover::before {
+    left: 0;
+}
+
+.apply-button button i {
+    position: relative;
+    z-index: 1;
+}
+
+.touch-apply button:hover {
+    color: white;
+}
+
+@media only screen and (max-width: 1200px) {
+    #banner .banner-content {
+        width: 80%;
+        padding: 0px 20px;
+    }
+
+    #banner .banner-content p {
+        font-size: 16px;
+    }
+
+    #banner .banner-content h1 {
+        font-size: 45px;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    #banner .banner-content {
+        width: 100%;
+    }
+
+    #banner .banner-content p {
+        font-size: 14px;
+    }
+
+    #banner .banner-content h1 {
+        font-size: 40px;
+    }
+
+    #banner .banner-content .touch-apply button {
+        margin-top: 30px;
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #banner .banner-content h1 {
+        font-size: 30px;
+    }
+
+    #banner .banner-content .touch-apply button {
+        margin-top: 30px;
+        padding: 15px 25px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    #banner .banner-content p {
+        font-size: 12px;
+    }
+
+    #banner .banner-content p::before {
+        width: 40px;
+    }
+
+    #banner .banner-content h1 {
+        font-size: 30px;
+    }
+
+    #banner .banner-content .touch-apply button {
+        margin-top: 30px;
+    }
+
+    #banner .banner-desc {
+        margin-left: 15px;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    #banner .banner-content p {
+        font-size: 12px;
+    }
+    #banner .banner-content h1 {
+        font-size: 22px;
+        letter-spacing: 1px;
+    }
+
+    #banner .banner-content .touch-apply button {
+        margin-top: 10px;
+        padding: 10px 20px;
+    }
+}
+  
+/*--------------------------------------------------------------
+  # service start
   --------------------------------------------------------------*/
 
+#serivce {
+    padding: 80px 40px;
+}
 
+.flip-box {
+    perspective: 10000px;
+}
 
+.flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 350px;
+    transition: transform 0.4s;
+    transform-style: preserve-3d;
+}
 
+.flip-box:hover .flip-box-inner {
+    transform: rotateY(180deg);
+}
 
+.flip-box-front,
+.flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
 
+.flip-box-back {
+    transform: rotateY(180deg);
+    background-size: cover;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
 
+.flip-box:hover .flip-box-back {
+    opacity: 1;
+}
 
+.service-box {
+    background-color: var(--white);
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    transition: background-color 0.4s;
+}
 
+.flip-box:hover .service-box {
+    background-color: rgba(0, 0, 0, 0.555);
+    color: var(--white);
+}
 
+.service-box i {
+    color: var(--white);
+    padding: 20px;
+    border-radius: 50px;
+    font-size: 50px;
+    margin-bottom: 20px;
+    background-color: var(--icon);
+}
 
+.service-box h5 {
+    font-weight: 500;
+    letter-spacing: 1px;
+    font-size: 22px;
+    margin-bottom: 20px;
+    color: #1c1c52;
+    font-family: "Montserrat";
+}
 
+.service-text-font {
+    font-size: 16px;
+    font-weight: 300;
+    color: rgba(53, 53, 53, 0.88);
+    font-family: "Roboto", "Open Sans";
+}
+.service-text-back {
+    font-size: 17px;
+    font-weight: 300;
+    color: rgb(229, 229, 229);
+    font-family: "Roboto", "Open Sans";
+}
 
+.service-box-back {
+    text-align: left;
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
+.service-box-back i {
+    color: var(--icon);
+    padding: 15px;
+    border-radius: 50px;
+    font-size: 50px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    background-color: var(--white);
+}
 
+.service-box-back h5 {
+    font-size: 24px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    color: #fff;
+}
+@media only screen and (max-width: 992px) {
+    #serivce {
+        padding: 80px 20px;
+    }
+}
 
+/*--------------------------------------------------------------
+# features Section
+--------------------------------------------------------------*/
+#features .icon-box {
+    display: flex;
+}
 
+#features .icon-box h4 {
+    font-size: 20px;
+    font-weight: 700;
+    margin: 0 0 10px 0;
+    color: var(--heading);
+}
 
+#features .icon-box i {
+    font-size: 44px;
+    line-height: 44px;
+    color: var(--primary);
+    margin-right: 15px;
+}
 
+#features .icon-box p {
+    font-size: 15px;
+    color: var(--dark);
+}
 
+@media only screen and (max-width: 1200px) {
+    #features .feature_img img{
+        display: none;
+    }
 
+    #workprocess .process_content .process_step {
+        font-size: 16px;
+    }
+}
 
+@media only screen and (max-width: 1200px) {
+    
+}
 
-
-
-
-
-
-
-
-
-
-
-
+/*--------------------------------------------------------------
+# Stats Section
+--------------------------------------------------------------*/
+.stats .stats-item {
+    background-color: var(--surface-color);
+    box-shadow: 0px 0 30px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+  }
   
+  .stats .stats-item i {
+    color: var(--accent-color);
+    font-size: 42px;
+    line-height: 0;
+    margin-right: 20px;
+  }
+  
+  .stats .stats-item span {
+    color: var(--heading-color);
+    font-size: 36px;
+    display: block;
+    font-weight: 600;
+  }
+  
+  .stats .stats-item p {
+    padding: 0;
+    margin: 0;
+    font-family: var(--heading-font);
+    font-size: 16px;
+  }
+
+/*--------------------------------------------------------------
+  # portfolio start
+  --------------------------------------------------------------*/
+  #portfolio .tap {
+    background-color: #cbddef77;
+    padding-left: 0px;
+}
+
+#portfolio .tap .btn {
+    border: none !important;
+}
+
+#portfolio .tap li.active {
+    box-shadow: -6px -6px 10px 0px #f5f9fc, 4px 3px 15px 0px rgba(127, 163, 199, 0.3);
+    background: linear-gradient(103deg, #e3edf7, #ffffff);
+}
+
+#portfolio .product-btn {
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    position: absolute;
+}
+
+#portfolio .card:hover .product-btn {
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    padding-top: 50px;
+    background: linear-gradient(103deg, #52535898, #aaa49fd2);
+}
+
+#portfolio .product-btn a {
+    padding: 5px 0px;
+    text-align: center;
+    text-decoration: none;
+    width: 120px;
+    border-radius: 15px;
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 500;
+}
+
+#portfolio .p_heading .p_name {
+    font-size: 16px;
+    font-weight: 400;
+}
+
+#portfolio .p_heading .p_cate {
+    font-size: 12px;
+}
+
+#portfolio .p_btn {
+    gap: 8px;
+}
+
+#portfolio .p_img {
+    border-bottom: 5px solid var(--border);
+}
+
+#portfolio .p_comp a {
+    padding: 0px 15px;
+    text-decoration: none;
+    color: var(--black);
+    font-size: 16px;
+    font-weight: 500;
+}
+
+#portfolio .p_comp a:hover {
+    color: var(--heading);
+}
+@media only screen and (max-width: 768px) {
+    #portfolio .tap li {
+        width: 49%;
+    }
+}
+
+
+
+/*--------------------------------------------------------------
+  # award start
+  --------------------------------------------------------------*/
+
+#award {
+    padding: 100px 0px;
+}
+
+#award .award-title {
+    width: 60%;
+}
+
+#award .card {
+    background-color: var(--white);
+    color: var(--black);
+    border-radius: unset;
+    padding: 20px;
+    border: unset !important;
+}
+
+#award .card .award-img {
+    margin: 20px auto;
+    height: 100px;
+}
+
+#award .card .award-img img {
+    margin: 20px auto;
+}
+
+.owl-carousel {
+    position: relative;
+}
+
+.owl-nav {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+}
+
+.owl-prev,
+.owl-next {
+    font-size: 30px !important;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1000;
+}
+
+.owl-prev {
+    left: 0 !important;
+}
+
+.owl-prev span {
+    background-color: var(--icon) !important;
+    color: var(--white) !important;
+    border-radius: 50%;
+    padding: 2px 13px !important;
+}
+
+.owl-next {
+    right: 0 !important;
+}
+
+.owl-next span {
+    background-color: var(--icon) !important;
+    color: var(--white) !important;
+    border-radius: 50%;
+    padding: 2px 13px !important;
+}
+
+
+
+
+/*--------------------------------------------------------------
+  # Contact
+  --------------------------------------------------------------*/
+
+#contact .info-box {
+    background-image: linear-gradient(135deg, #e8f7f6d2, #f5e9e9d7);
+    padding: 30px;
+    border-radius: 5px;
+}
+
+#contact .info-box i {
+    font-size: 38px;
+    line-height: 0;
+    color: var(--heading);
+}
+
+#contact .info-box h3 {
+    font-size: 20px;
+    color: var(--black);
+    font-weight: 700;
+    margin: 20px 0 10px 0;
+}
+
+#contact .info-box p {
+    padding: 0;
+    line-height: 24px;
+    font-size: 14px;
+    margin-bottom: 0;
+}
+
+#contact .php-email-form {
+    background: var(--white);
+    padding: 30px;
+    height: 100%;
+}
+
+#contact .php-email-form .sent-message {
+    display: none;
+    color: var(--white);
+    background: var(--heading);
+    text-align: center;
+    padding: 15px;
+    margin-bottom: 24px;
+    font-weight: 600;
+}
+
+#contact .php-email-form input,
+#contact .php-email-form textarea {
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 14px;
+    border-radius: 0;
+}
+
+#contact .php-email-form input:focus,
+#contact .php-email-form textarea:focus {
+    border-color: var(--heading);
+}
+
+#contact .php-email-form input[type=text],
+#contact .php-email-form input[type=email] {
+    padding: 10px 15px;
+}
+
+#contact .php-email-form textarea {
+    padding: 12px 15px;
+}
+
+#contact .php-email-form button[type=submit] {
+    background: var(--button);
+    border: 0;
+    padding: 10px 30px;
+    color: var(--white);
+    transition: 0.4s;
+    border-radius: 4px;
+}
+
+#contact .php-email-form button[type=submit]:hover {
+    background: #5969f3;
+}
+
+#contact .info-box i {
+    padding-top: 12px !important;
+}
+
+
+/*--------------------------------------------------------------
+  # Footer  card start
+  --------------------------------------------------------------*/
+#footer-card .contact_card {
+    background-image: linear-gradient(135deg, #e8f7f6d2, #f5e9e9d7);
+    border-radius: 15px !important;
+    padding: 30px;
+}
+
+#footer-card .contact_card {
+    font-size: 16px;
+    font-weight: 400;
+}
+
+#footer-card .contact_card img {
+    width: 60px;
+}
+
+#footer-card .contact_content a {
+    padding: 10px 10px;
+    text-decoration: none;
+    color: var(--black);
+}
+
+@media only screen and (max-width: 490px) {
+
+    .contact_card {
+        padding: 30px 20px !important;
+    }
+
+    .contact_card span {
+        padding-right: 5px !important;
+    }
+
+    .contact_card a img {
+        width: 50px !important;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    .contact_card {
+        padding: 30px 10px !important;
+    }
+
+    .contact_card span {
+        padding-right: 5px !important;
+    }
+
+    .contact_card a img {
+        width: 45px !important;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /*--------------------------------------------------------------
