--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -815,10 +815,11 @@ body {
 # Stats Section
 --------------------------------------------------------------*/
 #stats {
-    padding-top: 40px;
-    padding-bottom: 80px;
+    padding-top: 150px;
+    padding-bottom: 150px;
     padding-left: 40px;
     padding-right: 40px;
+    background-color: var(--contrast-color);
 }
 #stats .stats-item {
     background-color: var(--surface-color);
