--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -459,7 +459,6 @@ body {
     }
 }
 
-
 .carousel-img {
     animation: zoomIn 10s ease-in-out infinite alternate;
 }
@@ -783,7 +782,7 @@ body {
 #features .icon-box i {
     font-size: 44px;
     line-height: 44px;
-    color: var(--primary-color);
+    color: var(--info-color);
     margin-right: 15px;
 }
 
@@ -892,7 +891,7 @@ body {
     width: 100%;
     height: 100%;
     padding-top: 50px;
-    background: linear-gradient(103deg, #52535898, #aaa49fd2);
+    background: linear-gradient(103deg, #2a2a2c98, #2c2b2bd2);
 }
 
 #portfolio .product-btn a {
@@ -904,6 +903,9 @@ body {
     color: var(--white-color);
     font-size: 14px;
     font-weight: 500;
+}
+#portfolio .product-btn .button {
+    background: linear-gradient(135deg, #16f037da, #7cf0167e);
 }
 
 #portfolio .p_heading .p_name {
@@ -926,7 +928,7 @@ body {
 #portfolio .p_comp a {
     padding: 0px 15px;
     text-decoration: none;
-    color: var(--heading-color);
+    color: var(--contrast-color);
     font-size: 16px;
     font-weight: 500;
 }
